# dskullys-staking

./: Anchor.toml  Justfile  README.md  deploy.toml  package.json
app/: package.json
app/components/Donut/: Donut.tsx
app/components/Header/: Header.tsx
app/components/NFTGallery/: CollectionItem.tsx  NFTGallery.tsx
app/components/ProgressBar/: ProgressBar.tsx
app/components/WalletManager/: WalletManager.tsx
app/components/icons/: SolanaIcon.tsx
app/hooks/: useStaking.ts  useTotalStaked.ts  useWalletNFTs.tsx
app/lib/: index.ts  pda.ts  utils.ts
app/pages/: _app.tsx  index.tsx
app/public/fonts/: fonts.css
app/styles/: react-tabs.ts  theme.ts
cli/: Cargo.toml  README.md  locks.json  setup.sh
cli/src/: app.rs  lib.rs  main.rs  output.rs  utils.rs
cli/src/app/: mod.rs  output.rs
cli/src/client/: mod.rs  pda.rs
programs/dskullys_staking/: Cargo.toml
programs/dskullys_staking/src/: lib.rs  utils.rs
programs/dskullys_staking/src/instructions/: add_manager.rs  mod.rs  stake.rs  unstake.rs
programs/dskullys_staking/src/state/: farm.rs  mod.rs  stake_receipt.rs  whitelist_proof.rs
programs/magicshards_staking/src/: lib.rs  utils.rs
programs/magicshards_staking/src/instructions/: create_farm.rs  stake.rs
programs/magicshards_staking/src/state/: farmer.rs  stake_receipt.rs
scripts/: createFarm.ts  forceUnstake.ts  fundFarm.ts  getFarmAddress.ts  setup-example.sh
tests/: dskullys-staking.ts  magicshards-staking.ts
