[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "staking_client"
path = "src/lib.rs"

[[bin]]
name = "staking_cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anchor-client = "0.24.2"
anchor-spl = "0.24.2"
solana-cli-config = "1.9.28"
magicshards-staking = { path = "../programs/magicshards_staking", version = "0.1.0", features = ["no-entrypoint"] }
clap = { version = "3.2.15", features = ["derive"] }
anyhow = "1.0.58"
thiserror = "1.0.31"
shellexpand = "2.1.0"

